<resources>
    <string name="app_name">Beome</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_like">Like</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
    <string name="post">Post</string>
    <string name="reason">Reason</string>
    <string name="report_detail">Report detail</string>
    <string name="submit_report">Submit Report</string>
    <string name="select_a_reason">Select a reason</string>
    <string name="describe_why_you_report">Describe why you report this…</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="post_date">Yesterday</string>
    <string name="tags">Tags</string>
    <string name="title">Title</string>
    <string name="feedback">Feedback</string>
    <string name="welcome_back">Welcome Back!</string>
...
